# graphmatchingtools

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
data/cortex_simulation/: ground_truth.gpickle  ground_truth.pkl  parameters.json
data/cortex_simulation/generated_graphs/: graph_00000.pkl  graph_00001.pkl  graph_00002.pkl  graph_00003.pkl  graph_00004.pkl  graph_00005.pkl  graph_00006.pkl  graph_00007.pkl  graph_00008.pkl  graph_00009.pkl  graph_00010.pkl
data/cortex_simulation/graphs/: graph_00000.gpickle  graph_00001.gpickle  graph_00002.gpickle  graph_00003.gpickle  graph_00004.gpickle  graph_00005.gpickle  graph_00006.gpickle  graph_00007.gpickle  graph_00008.gpickle  graph_00009.gpickle
docs/: authors.rst  changelog.rst  conf.py  generation.rst  index.rst  tutorial.rst
graph_matching_tools/algorithms/: kmeans_on_coordinates.py
graph_matching_tools/algorithms/kernels/: gaussian.py  linear.py  rff.py  utils.py
graph_matching_tools/algorithms/mean/: mm_mean.py  wasserstein_barycenter.py
graph_matching_tools/algorithms/multiway/: boolean_nmf.py  dist_mkergm.py  fgw.py  fmgm.py  ga_mgmc.py  gwl.py  hippi.py  irgcl.py  kergm.py  kmeans.py  matchals.py  matcheig.py  mixer.py  mkergm.py  msync.py  quickmatch.py  stiefel.py  utils.py
graph_matching_tools/algorithms/pairwise/: fgw.py  grasp.py  gwl.py  gwl2.py  kergm.py  rrwm.py
graph_matching_tools/demos/: gmt_demo_fgw_barycenter.py  gmt_demo_generate_graph.py  gmt_demo_intgraph.py  gmt_demo_kmeans.py  gmt_demo_optimal_transport.py  gmt_demo_pytorchdata.py  gmt_demo_randomgraph.py  gmt_demo_selflearning.py
graph_matching_tools/generators/: graph_family.py  noisy_graph.py  reference_graph.py  topology.py
graph_matching_tools/io/: graph_dataset.py  load_graphs_and_create_metadata.py  pygeo_graphs.py
graph_matching_tools/learning/: GAE.py
graph_matching_tools/metrics/: matching.py
graph_matching_tools/solvers/convex/: conjugate_gradient.py
graph_matching_tools/solvers/manifold/: landing.py
graph_matching_tools/solvers/ot/: sinkhorn.py  sns.py
graph_matching_tools/utils/: create_full_affinity_mat.py  draw.py  manopt.py  permutations.py  sphere.py  union.py  utils.py  von_mises.py
scripts/: INTGraph_Example.py  KMeans_Example.py  PyTorchGeo_Example.py  RandomGraphMatching.py  SelfLearning_Example.py
tests/algorithms/kernels/: test_gaussian.py  test_linear.py
tests/algorithms/mean/: test_mm_mean.py  test_wasserstein_barycenter.py
tests/algorithms/multiway/: test_boolean_nmf.py  test_dist_mkergm.py  test_fgw.py  test_fmgm.py  test_ga_mgmc.py  test_gwl.py  test_hippi.py  test_irgcl.py  test_kergm.py  test_kmeans.py  test_matchals.py  test_matcheig.py  test_mixer.py  test_mkergm.py  test_msync.py  test_quickmatch.py  test_stiefel.py
tests/algorithms/pairwise/: test_fgw.py  test_grasp.py  test_gwl.py  test_kergm.py  test_rrwm.py
tests/generators/: test_graph_family.py  test_noisy_graph.py  test_reference_graph.py  test_topology.py
tests/io/: test_graph_dataset.py  test_pygeo_graphs.py
tests/metrics/: test_matching.py
tests/solvers/convex/: test_conjugate_gradient.py
tests/solvers/manifold/: test_landing.py
tests/solvers/ot/: test_sinkhorn.py  test_sns.py
tests/utils/: test_manopt.py  test_permutations.py  test_sphere.py  test_union.py  test_utils.py  test_von_mises.py
