[project]
name = "graphmatchingtools"
version = "0.9.0"
authors = [
    { name="François-Xavier Dupé", email="francois-xavier.dupe@univ-amu.fr" },
    { name="Rohit Yadav", email="rohit.yadav@univ-amu.fr" },
]
description = "Unsupervised multiple graphs matching methods"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy>=1.10',
    'scipy>=1.7',
    'networkx>=2.7',
    'scikit-learn>=1.0',
    'jax>=0.4',
    'jaxlib>=0.4',
]

[project.urls]
"Homepage" = "https://github.com/fxdupe/graphmatchingtools"
"Bug Tracker" = "https://github.com/fxdupe/graphmatchingtools/issues"

[build-system]
requires = [
    "setuptools>=61",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "Graph Matching Tools"
version = "0.8.0"
description = "Tools for multiple graph matching with coherence"
authors = ["François-Xavier Dupé <francois-xavier.dupe@univ-amu.fr>",
    "Rohit Yadav <rohit.yadav@univ-amu.fr>"]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">1.10"
scipy = ">=1.7"
networkx = ">=2.7"
scikit-learn = ">=1.0"
jax = ">=0.3.24"
jaxlib = ">=0.3.24"

[tool.poetry.dev-dependencies]
pytest = ">=7.0"
pytest-cov = ">=3.0"
coverage = ">=6.0"
sphinx = ">=6.0"
sphinx-autoapi = ">=2.0"
furo = ">=2022.12.7"
tox = ">=4.0"
black = ">=23.9"
pre-commit = ">=3.2.0"
