[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=3.0
    coverage>=6.0
    sphinx>=6.0
    sphinx-autoapi>=2.0
    furo>=2022.12.7
    tox>=4.0
    black>=23.1
    pre-commit>=3.2.0

[flake8]
docstring-convention = numpy
max-line-length = 88
ignore =
    E203,  # space before : (needed for how black formats slicing)
    W503,  # line break before binary operator
exclude =
    setup.py
    tests/*.py # excluded because flake requires docstrings for tests, included for black

[tool:pytest]
addopts = --cov=graph_matching_tools

[coverage:run]
branch = True
omit =
    # omit anything in a .local directory anywhere
    */.local/*
    # omit everything in /usr
    /usr/*
    # omit this single file
    tests/*
    # omit GAE for the moment
    graph_matching_tools/learning/GAE.py

[coverage:report]
show_missing = True
skip_covered = True
